--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "cheerio": "^1.0.0-rc.12",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
